layout bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ a:hover{
 }
 
 .main{
-    flex: 1;
+    flex: 0.8;
     width: 100%;
 }
 .routes{
